--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "onnxconverter-common>=1.16.0",
     "onnxruntime>=1.23.2",
     "opencv-python>=4.12.0.88",
+    "timm>=1.0.22",
 ]
 
 [dependency-groups]
