--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,12 @@
   "type": "commonjs",
   "dependencies": {
     "@hono/node-server": "^1.19.7",
+    "@hono/zod-validator": "^0.7.6",
     "better-sqlite3": "^12.5.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
-    "hono": "^4.11.3"
+    "hono": "^4.11.3",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
