--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "db:push": "drizzle-kit push",
     "db:verify": "tsx scripts/verify-db.ts",
-    "dev": "tsx watch src/index.ts",
+    "dev": "NODE_ENV=local tsx watch src/index.ts",
     "test": "vitest run"
   },
   "keywords": [],
