--- a/ui/package.json
+++ b/ui/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"npm run dev --prefix ../server\"",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "format": "prettier --write ."
@@ -21,6 +21,7 @@
     "@types/file-saver": "^2.0.7",
     "canvas": "^3.2.0",
     "commander": "^14.0.2",
+    "concurrently": "^9.2.1",
     "glob": "^13.0.0",
     "jimp": "^1.6.0",
     "onnxruntime-node": "^1.23.2",
