--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "db:push": "drizzle-kit push",
     "db:verify": "tsx scripts/verify-db.ts",
+    "predev": "lsof -ti :3000 | xargs kill -9 2>/dev/null || true",
     "dev": "NODE_ENV=local tsx watch src/index.ts",
     "test": "vitest run"
   },
