--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "db:verify": "tsx scripts/verify-db.ts",
     "predev": "lsof -ti :3000 | xargs kill -9 2>/dev/null || true",
     "dev": "NODE_ENV=local tsx watch src/index.ts",
-    "test": "vitest run"
+    "test": "vitest run",
+    "build": "node build.js"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +29,7 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^25.0.3",
     "drizzle-kit": "^0.31.8",
+    "esbuild": "^0.27.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vitest": "^4.0.16"
