--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build Server (_worker.js)
         run: |
           cd server && npm run build
-          cp server/dist/_worker.js ui/dist/_worker.js
+          cp dist/_worker.js ../ui/dist/_worker.js
 
       - name: Deploy to Cloudflare Pages
         uses: cloudflare/wrangler-action@v3
