--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,6 @@
 name = "rails49"
 compatibility_date = "2024-04-01"
+compatibility_flags = ["nodejs_compat"]
 pages_build_output_dir = "ui/dist"
 
 [[d1_databases]]
