--- a/ui/package.json
+++ b/ui/package.json
@@ -7,6 +7,7 @@
     "predev": "lsof -ti :5173 | xargs kill -9 2>/dev/null || true",
     "dev": "concurrently \"vite\" \"npm run dev --prefix ../server\"",
     "build": "tsc && vite build",
+    "postbuild": "find dist -name '*.ort' -delete && find dist -name '*.wasm' -delete",
     "preview": "vite preview",
     "format": "prettier --write ."
   },
