--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 name = "rails49"
-compatibility_date = "2024-04-01"
+compatibility_date = "2026-01-17"
 compatibility_flags = ["nodejs_compat"]
 pages_build_output_dir = "ui/dist"
 
@@ -13,5 +13,5 @@ binding = "IMAGES"
 bucket_name = "rails49-assets"
 
 [vars]
-ADMIN_EMAIL = "admin@rails49.org"
+ADMIN_EMAIL = "bernhard.e.boser@gmail.com"
 NODE_ENV = "production"
