--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,6 +6,8 @@
     "strict": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
     "types": ["@cloudflare/workers-types", "node"]
   },
   "include": ["src/**/*"]
