Rebranding: Rename Rails49 to Blocks49
- Updated package.json, pyproject.toml, and wrangler.toml
- Renamed environment variables and constants
- Updated UI components and branding
- Migrated Cloudflare project and R2/D1 resources
- Updated GitHub Actions and .gitignore
- Updated local git remotes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,4 +36,4 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: pages deploy ui/dist --project-name=rails49 --branch=main
+          command: pages deploy ui/dist --project-name=blocks49 --branch=main
